fix : Suppression des overflow et fixation du footer en bas de page

--- a/src/app/modules/core/footer/footer.component.css
+++ b/src/app/modules/core/footer/footer.component.css
@@ -1,13 +1,10 @@
 .footer{
     display: flex;
     justify-content: center;
-    position: absolute;
-    bottom: 0;
     margin: 25px;
     height: 375px;
     border-width: 1px;
     background-color: #DDDDDD;
-    width: 100vw;
     margin: 0;
 }
 
